Added report Admin GeneralPayment, ManagementCommittee and Plot Transfer

--- a/ShahWilayat/Views/ManagementCommitteePaymentsAdmin/Index.cshtml
+++ b/ShahWilayat/Views/ManagementCommitteePaymentsAdmin/Index.cshtml
@@ -1,12 +1,14 @@
 ﻿
 @{
-    ViewBag.Title = "Plot Transfer - Shah Wilayat Cooperative Society";
+    ViewBag.Title = "Management Committee Payments Report (Admin)";
     Layout = "~/Views/Shared/_MasterPage.cshtml";
 }
 
+
+
 <div class="content-header row">
     <div class="content-header-left col-md-6 col-12 mb-2">
-        <h3 class="content-header-title">Plot Transfer (Society)</h3>
+        <h3 class="content-header-title">Management Committee Payments Report (Admin)</h3>
     </div>
 
 </div>
@@ -31,12 +33,6 @@
 @section Scripts
 {
 
-
-    <script src="~/Scripts/assets/js/PagesJS/PlotTransfer.js"></script>
-
+    <script src="~/Scripts/assets/js/PagesJS/ManagementCommitteePaymentsAdmin.js"></script>
 
 }
-
-
-
-
