--- a/ShahWilayat/Views/PlotTransferAdmin/Index.cshtml
+++ b/ShahWilayat/Views/PlotTransferAdmin/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿
 @{
-    ViewBag.Title = "Plot Transfer - Shah Wilayat Cooperative Society";
+    ViewBag.Title = "Plot Transfer Admin - Shah Wilayat Cooperative Society";
     Layout = "~/Views/Shared/_MasterPage.cshtml";
 }
 
 <div class="content-header row">
     <div class="content-header-left col-md-6 col-12 mb-2">
-        <h3 class="content-header-title">Plot Transfer (Society)</h3>
+        <h3 class="content-header-title">Plot Transfer (Admin)</h3>
     </div>
 
 </div>
@@ -32,7 +32,7 @@
 {
 
 
-    <script src="~/Scripts/assets/js/PagesJS/PlotTransfer.js"></script>
+    <script src="~/Scripts/assets/js/PagesJS/PlotTransferAdmin.js"></script>
 
 
 }
