--- a/ShahWilayat/Views/GeneralPayment/Index.cshtml
+++ b/ShahWilayat/Views/GeneralPayment/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="content-header row">
     <div class="content-header-left col-md-6 col-12 mb-2">
-        <h3 class="content-header-title">Genernal Payment Report</h3>
+        <h3 class="content-header-title">Genernal Payment Report (Society)</h3>
     </div>
 
 </div>
