--- a/ShahWilayat/Views/GeneralPaymentAdmin/Index.cshtml
+++ b/ShahWilayat/Views/GeneralPaymentAdmin/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "Plot Transfer - Shah Wilayat Cooperative Society";
+    ViewBag.Title = "Genernal Payment Admin - Shah Wilayat Cooperative Housing Society";
     Layout = "~/Views/Shared/_MasterPage.cshtml";
 }
 
+
 <div class="content-header row">
     <div class="content-header-left col-md-6 col-12 mb-2">
-        <h3 class="content-header-title">Plot Transfer (Society)</h3>
+        <h3 class="content-header-title">Genernal Payment Report (Admin)</h3>
     </div>
 
 </div>
@@ -32,11 +33,7 @@
 {
 
 
-    <script src="~/Scripts/assets/js/PagesJS/PlotTransfer.js"></script>
+    <script src="~/Scripts/assets/js/PagesJS/GeneralPaymentAdmin.js"></script>
 
 
 }
-
-
-
-
