Fix Membership Single report.

--- a/ShahWilayat/Views/MembershipSingle/Index.cshtml
+++ b/ShahWilayat/Views/MembershipSingle/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="content-header row">
     <div class="content-header-left col-md-6 col-12 mb-2">
-        <h3 class="content-header-title">MembershipFormSingle</h3>
+        <h3 class="content-header-title">Membership Form Single</h3>
     </div>
 
 </div>
@@ -109,67 +109,67 @@
                                             <img class="printNomineeProfileFile" src="~/Content/assets/css/PrintMaterial/MembershipSingle/Musab.jpg" style="width:111px; height: 153px;border-radius:0px 16px 0px 0px;">
                                         </div>
                                         <div class="MemberAddress">
-                                            <span class="printPermanentAddress"> House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.</span>
+                                            <span class="printPermanentAddress"></span>
                                         </div>
                                         <div class="NomineeAddress">
-                                            <span class="printNomineePermanentAddress"> House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.</span>
+                                            <span class="printNomineePermanentAddress"></span>
                                         </div>
                                         <div class="MemberCNIC">
-                                            <span class="printCNIC">42101-5762826-3</span>
+                                            <span class="printCNIC"></span>
                                         </div>
                                         <div class="NomineeCNIC">
-                                            <span class="printNomineeCNIC">43201-7882702-8</span>
+                                            <span class="printNomineeCNIC"></span>
                                         </div>
 
                                         <div class="MemberLandline">
-                                            <span><b class="printLandline">021-34423977</b></span>
+                                            <span><b class="printLandline"></b></span>
                                         </div>
                                         <div class="NomineeLandline">
-                                            <span><b class="printNomineeLandline">021-34423977</b></span>
+                                            <span><b class="printNomineeLandline"></b></span>
                                         </div>
 
                                         <div class="MemberOffLandline">
-                                            <span><b class="printOfficePhone">021-34423977</b></span>
+                                            <span><b class="printOfficePhone"></b></span>
                                         </div>
                                         <div class="NomineeOffLandline">
-                                            <span><b class="printNomineeOffPhone">021-34423977</b></span>
+                                            <span><b class="printNomineeOffPhone"></b></span>
                                         </div>
 
                                         <div class="MemberBloodGroup">
-                                            <span><b class="printBloodGroup">A+</b></span>
+                                            <span><b class="printBloodGroup"></b></span>
                                         </div>
                                         <div class="NomineeBloodRelation">
-                                            <span><b class="printNomineeRelation">Mother</b></span>
+                                            <span><b class="printNomineeRelation"></b></span>
                                         </div>
                                         <div class="MemberMobile">
-                                            <span><b class="printCellNo">021-34423977</b></span>
+                                            <span><b class="printCellNo"></b></span>
                                         </div>
                                         <div class="NomineeMobile">
-                                            <span><b class="printNomineeCellNo">021-34423977</b></span>
+                                            <span><b class="printNomineeCellNo"></b></span>
                                         </div>
                                         <div class="MemberEmail">
-                                            <span><b class="printEmail">Musabyahiya@hotmail.com</b></span>
+                                            <span><b class="printEmail"></b></span>
                                         </div>
                                         <div class="NomineeEmail">
-                                            <span><b class="printNomineeEmail">m.fahad2016@gmail.com</b></span>
+                                            <span><b class="printNomineeEmail"></b></span>
                                         </div>
                                         <div class="NomineeRelation">
-                                            <span><b class="printNomineeRelation">Mother</b></span>
+                                            <span><b class="printNomineeRelation"></b></span>
                                         </div>
                                         <div class="NomineeRelationName">
-                                            <span><b class="printNomineeFullName">Msab Yahiya</b></span>
+                                            <span><b class="printNomineeFullName"></b></span>
                                         </div>
                                         <div class="PlotTitle">
-                                            <span><b class="printPlotType">Residential</b></span>
+                                            <span><b class="printPlotType"></b></span>
                                         </div>
                                         <div class="MembershipNo">
-                                            <span><b class="printMembershipNo">SWC/192/06</b></span>
+                                            <span><b class="printMembershipNo"></b></span>
                                         </div>
                                         <div class="PlotNo">
-                                            <span><b class="printPlotNo">R-120</b></span>
+                                            <span><b class="printPlotNo"></b></span>
                                         </div>
                                         <div class="PlotSize">
-                                            <span><b class="printPlotSize">120</b></span>
+                                            <span><b class="printPlotSize"></b></span>
                                         </div>
                                     </td>
                                 </tr>
@@ -227,7 +227,7 @@
 
             <td class="project-title" nowrap>
 
-                <a href="javascript:void(0)" onclick="PrintMembershipSingle(this);" title="Membership Single"><i class="la la-user warning"></i></a>
+                <a href="javascript:void(0)" onclick="PrintMembershipSingle(this);" title="Membership Single"><i class="la la-print warning"></i></a>
 
             </td>
 
