--- a/ShahWilayat/Views/Shared/_HeaderNavBar.cshtml
+++ b/ShahWilayat/Views/Shared/_HeaderNavBar.cshtml
@@ -39,13 +39,13 @@
                             <a class="dropdown-item" href="#"><i class="ft-mail"></i> My Inbox</a>
                             <a class="dropdown-item" href="#"><i class="ft-check-square"></i> Task</a>
                             <a class="dropdown-item" href="#"><i class="ft-message-square"></i> Chats</a>
-                            <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="ft-power"></i> Logout</a>
+                            <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="ft-power "></i> Logout</a>
                         </div>
                     </li>
 
 
                     <li class="dropdown dropdown-notification nav-item">
-                        <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-log-out"></i></a>
+                        <a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-log-out btnLogout"></i></a>
 
                     </li>
                 </ul>
