Nominees Issue resolved.

--- a/ShahWilayat/Views/Member/Index.cshtml
+++ b/ShahWilayat/Views/Member/Index.cshtml
@@ -948,7 +948,7 @@
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#PrintMember" onclick="PrintIndividualMember(this)" data-toggle="tooltip" title="Print Profile"><i class="la la-user warning"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditMember" onclick="EditMember(this)" data-toggle="tooltip" title="Edit Member"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditMember(this)" data-toggle="tooltip" title="Edit Attachment"><i class="ft-paperclip"></i></a>
-                <a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteMember" onclick="EditMember(this)" data-toggle="tooltip" title="Delete Member"><i class="la la-trash danger"></i></a>
+                @*<a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteMember" onclick="EditMember(this)" data-toggle="tooltip" title="Delete Member"><i class="la la-trash danger"></i></a>*@
             </td>
             <td align="center" class="project-title">
                 <a href="${CnicFrontFile==''? '': '../Uploads/'+JSON.parse(CnicFrontFile)[0]}" download="" data-toggle="tooltip" title="CNIC Front"><i class="la la-cloud-download warning"></i></a>&nbsp;
