--- a/ShahWilayat/Views/Nominee/Index.cshtml
+++ b/ShahWilayat/Views/Nominee/Index.cshtml
@@ -550,7 +550,7 @@
 
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditNominee" onclick="EditNominee(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Nominee"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditNominee(this)" title="Edit Attachment"><i class="ft-paperclip"></i></a>
-                <a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteNominee" onclick="EditNominee(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Nominee"><i class="la la-trash danger"></i></a>
+                @*<a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteNominee" onclick="EditNominee(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Nominee"><i class="la la-trash danger"></i></a>*@
 
             </td>
 
