--- a/ShahWilayat/Views/AssociateMember/Index.cshtml
+++ b/ShahWilayat/Views/AssociateMember/Index.cshtml
@@ -648,7 +648,7 @@
                 <a href="javascript:void(0)" onclick="PrintIDCard(this)" data-toggle="tooltip" title="ID Card"><i class="la la-credit-card primary"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditMember" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Member"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Attachment"><i class="ft-paperclip"></i></a>
-                <a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteMember" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Member"><i class="la la-trash danger"></i></a>
+                @*<a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteMember" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Member"><i class="la la-trash danger"></i></a>*@
             </td>
 
             <td align="center" class="project-title">
