--- a/ShahWilayat/Views/Plot/Index.cshtml
+++ b/ShahWilayat/Views/Plot/Index.cshtml
@@ -316,7 +316,7 @@
                <a href="${SitePlan==''? '': '../Uploads/'+JSON.parse(SitePlan)[0]}" download="" data-toggle="tooltip" title="Site Plan"><i class="la la-cloud-download warning"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditPlot" onclick="EditPlot(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Plot"><i class="la la-pencil-square success"></i></a>
 
-                <a href="javascript:void(0)" data-toggle="modal" data-target="#DeletePlot" onclick="EditPlot(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Plot"><i class="la la-trash danger"></i></a>
+                @*<a href="javascript:void(0)" data-toggle="modal" data-target="#DeletePlot" onclick="EditPlot(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Plot"><i class="la la-trash danger"></i></a>*@
             </td>
 
         </tr>
