Fixed search and associate transfer.

--- a/ShahWilayat/Views/AssociateMember/Index.cshtml
+++ b/ShahWilayat/Views/AssociateMember/Index.cshtml
@@ -347,7 +347,7 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtBirthPlace_upd">Place of Birth</label>
-                                <input type="text" id="txtBirthPlace_upd" class="form-control txtBirthPlace_upd" placeholder="Enter birth place">
+                                <input type="text" id="txtBirthPlace_upd" class="form-control txtBirthPlace_upd notrequired" placeholder="Enter birth place">
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -426,19 +426,19 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtPostalCode_upd">Postal Code</label>
-                                <input type="text" id="txtPostalCode_upd" class="form-control txtPostalCode_upd numericOnly" placeholder="Enter postal code">
+                                <input type="text" id="txtPostalCode_upd" class="form-control txtPostalCode_upd numericOnly notrequired" placeholder="Enter postal code">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtBloodGroup_upd">Blood Group</label>
-                                <input type="text" id="txtBloodGroup_upd" class="form-control txtBloodGroup_upd" placeholder="Enter blood group">
+                                <input type="text" id="txtBloodGroup_upd" class="form-control txtBloodGroup_upd notrequired" placeholder="Enter blood group">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="txtOccupation_upd">Occupation</label>
-                                <input type="text" id="txtOccupation_upd" class="form-control txtOccupation_upd" placeholder="Enter occupation">
+                                <input type="text" id="txtOccupation_upd" class="form-control txtOccupation_upd notrequired" placeholder="Enter occupation">
                             </div>
                         </div>
 
