--- a/ShahWilayat/Views/MembershipSingle/Index.cshtml
+++ b/ShahWilayat/Views/MembershipSingle/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="row">
     <div class="col-12">
         <div class="card">
-            @*<div class="card-header">
+            <div class="card-header">
                 <fieldset>
                     <div class="input-group">
                         <input type="text" class="form-control txtSearch" placeholder="Search..." aria-describedby="basic-addon4">
@@ -25,7 +25,7 @@
                     </div>
                 </fieldset>
 
-            </div>*@
+            </div>
             <div class="card-content">
 
                 <div class="table-responsive">
@@ -242,7 +242,7 @@
         </tr>
     </script>
 
-    <script src="~/Scripts/assets/js/PagesJS/MembershipSingle.js"></script>
+    <script src="~/Scripts/assets/js/PagesJS/MembershipSingle.js?v=0"></script>
 
 
 }
