--- a/ShahWilayat/Views/Transfer/Index.cshtml
+++ b/ShahWilayat/Views/Transfer/Index.cshtml
@@ -240,11 +240,11 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="ddlManagementCommittee">Created by</label>
-                                <select class="form-control ddlManagementCommittee"></select>
+                                <label for="ddlManagementCommittee_upd">Created by</label>
+                                <select class="form-control ddlManagementCommittee_upd"></select>
                             </div>
                         </div>
-
+                        s
                     </div>
                 </div>
             </div>
@@ -892,9 +892,10 @@
             <input type="hidden" class="hdnIndemnityBondScan" value="${IndemnityBondScan}" />
             <input type="hidden" class="hdnTransferOrderScan" value="${TransferOrderScan}" />
             <input type="hidden" class="hdnIsTransfered" value="${IsTransfered}" />
+            <input type="hidden" class="hdnManagementCommitteeId" value="${ManagementCommitteeId}" />
 
             <td></td>
-            <td class="project-title tdTransferOrderNo" nowrap>${TransferOrderNo}</td>
+            <td class="project-title tdTransferOrderNo" nowrap>${TransferOrderNo}</td>s
             <td class="project-title tdMember" nowrap>${Member}</td>
             <td class="project-title tdPlot" nowrap>${Plot}</td>
             <td class="project-title tdTransferDate" nowrap>${ToJavaScriptDate(TransferDate)}</td>
