--- a/ShahWilayat/Views/Login/Index.cshtml
+++ b/ShahWilayat/Views/Login/Index.cshtml
@@ -77,7 +77,7 @@
                                                     <i class="la la-key"></i>
                                                 </div>
                                             </fieldset>
-                                            <div class="form-group row">
+                                            @*<div class="form-group row">
                                                 <div class="col-md-6 col-12 text-center text-md-left">
                                                     <fieldset>
                                                         <input type="checkbox" id="rememberme" class="chk-remember">
@@ -85,7 +85,7 @@
                                                     </fieldset>
                                                 </div>
                                                 <div class="col-md-6 col-12 text-center text-md-right"><a href="recover-password.html" class="card-link">Forgot Password?</a></div>
-                                            </div>
+                                            </div>*@
                                             <button type="button" class="btn btn-info btn-lg btn-block btnLogin"><i class="ft-unlock"></i> Login</button>
                                         </div>
                                     </div>
