--- a/ShahWilayat/Views/Shared/_HeaderNavBar.cshtml
+++ b/ShahWilayat/Views/Shared/_HeaderNavBar.cshtml
@@ -27,20 +27,20 @@
                     <li class="dropdown dropdown-user nav-item">
                         <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
                             <span class="mr-1">
-                                Hello,
+                                Logged in user,
                                 <span class="user-name text-bold-700">@{ @Session["FirstName"].ToString(); }</span>
                             </span>
                             <span class="avatar avatar-online">
                                 <img src="~/Content/app-assets/images/portrait/small/user.png" alt="avatar"><i></i>
                             </span>
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right">
+                        @*<div class="dropdown-menu dropdown-menu-right">
                             <a class="dropdown-item" href="#"><i class="ft-user"></i> Edit Profile</a>
                             <a class="dropdown-item" href="#"><i class="ft-mail"></i> My Inbox</a>
                             <a class="dropdown-item" href="#"><i class="ft-check-square"></i> Task</a>
                             <a class="dropdown-item" href="#"><i class="ft-message-square"></i> Chats</a>
                             <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="ft-power "></i> Logout</a>
-                        </div>
+                        </div>*@
                     </li>
 
 
